[package]
name = "oxide-auth-actix"
version = "0.2.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "A OAuth2 server library for actix featuring a set of configurable and pluggable backends."
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
sgx_tstd            = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

url                 = { git = "https://github.com/mesalock-linux/rust-url-sgx.git", features = ["serde", "sgx_tstd"]  }
futures             = { version = "0.3", default-features = false }
oxide-auth          = { version = "0.5.0", path = "../oxide-auth" }
# serde_urlencoded    = "0.7"

# actix               = { version = "0.13", default-features = false }
# actix-web           = { version = "4.2.1", default-features = false }


# [dev-dependencies]
# base64 = "0.13"
# chrono = { version = "0.4", default-features = false, features = ["clock"] }
# serde = "1.0"
# serde_json = "1.0"
