[package]
name = "oxide-auth-async"
version = "0.1.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"

description = "Combines oxide-auth with async and futures"
readme = "Readme.md"
keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
sgx_tstd            = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
async-trait         = { version = "0.1.59", default-features = false }
oxide-auth          = { version = "0.5.0", path = "../oxide-auth" }
base64              = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git"}
url                 = { git = "https://github.com/mesalock-linux/rust-url-sgx.git", features = ["serde", "sgx_tstd"]  }
chrono              = { git = "https://github.com/mesalock-linux/chrono-sgx.git", features = ["serde"] }
serde_json          = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
serde_derive        = { git = "https://github.com/mesalock-linux/serde-sgx.git" }

# [dev-dependencies]
# serde = "1.0.148"
# smol = "1.3.0"
