[package]
name = "oxide-auth"
version = "0.5.3"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
repository = "https://github.com/HeroicKatora/oxide-auth.git"
edition = "2018"

description = "A OAuth2 library for common web servers, featuring a set of configurable and pluggable backends."
readme = "Readme.md"

keywords = ["oauth", "server", "oauth2"]
categories = ["web-programming::http-server", "authentication"]
license = "MIT OR Apache-2.0"

autoexamples = false

[dependencies]
sgx_tstd            = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

base64              = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git"}
url                 = { git = "https://github.com/mesalock-linux/rust-url-sgx.git", features = ["serde", "sgx_tstd"]  }
serde               = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
serde_derive        = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
serde_json          = { git = "https://github.com/mesalock-linux/serde-json-sgx.git" }
rand                = { git = "https://github.com/mesalock-linux/rand-sgx.git" }
once_cell           = { git = "https://github.com/mesalock-linux/once_cell-sgx.git" } 
subtle              = { git = "https://github.com/mesalock-linux/subtle-sgx.git" }
chrono              = { git = "https://github.com/mesalock-linux/chrono-sgx.git", features = ["serde"] }
# sha1              = { git = "https://github.com/mesalock-linux/rust-sha1-sgx.git" }
sha2                = { version = "0.10", default-features = false }

#[dependencies.sha2]
#digest              = { version = "0.10", default-features = false }       

hmac                = { version = "0.12.0", default-features = false }
# rust-argon2 = "1.0"
# rmp-serde = "1.1"

# sha2 = "0.10.1"
# chrono = { version = "0.4", default-features = false, features = ["clock"] }

# [dev-dependencies]
# reqwest = { version = "0.11.10", features = ["blocking"] }

[package.metadata.docs.rs]
features = []
